# trial

./: README.md  cabal.project  trial.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Trial.hs
test/: Doctest.hs  Spec.hs
test/Test/Trial/: Gen.hs  Laws.hs
trial/: CHANGELOG.md  trial.cabal
trial-example/: CHANGELOG.md  README.md  trial-example.cabal
trial-example/app/: Main.hs
trial-example/app-advanced/: Main.hs
trial-optparse-applicative/: CHANGELOG.md  README.md  trial-optparse-applicative.cabal
trial-optparse-applicative/src/Trial/: OptparseApplicative.hs
trial-tomland/: CHANGELOG.md  README.md  trial-tomland.cabal
trial-tomland/src/Trial/: Tomland.hs
trial/src/: Trial.hs
trial/test/: Doctest.hs
trial/test/Test/Trial/: Gen.hs  Laws.hs  Property.hs
