cabal-version:       2.4
name:                trial-example
version:             0.0.0.1
synopsis:            Example project to show how Trial could be used
description:         Example project to show how Trial could be used
homepage:            https://github.com/kowainik/trial
bug-reports:         https://github.com/kowainik/trial/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020-2022 Kowainik
category:            Example
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3
                     GHC == 8.10.7
                     GHC == 9.0.2
                     GHC == 9.2.4

source-repository head
  type:                git
  location:            https://github.com/kowainik/trial.git


common common-options
  build-depends:       base >= 4.12.0.0 && < 4.18
                     , trial
                     , trial-optparse-applicative
                     , trial-tomland
                     , optparse-applicative >= 0.15 && < 0.18
                     , text
                     , tomland ^>= 1.3.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Woperator-whitespace
                       -Wredundant-bang-patterns

  -- execs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

executable trial-example
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs


executable trial-example-advanced
  import:              common-options
  hs-source-dirs:      app-advanced
  main-is:             Main.hs
