cabal-version:       2.4
name:                trial
version:             0.0.0.0
synopsis:            Trial Data Type
description:         Trial Data Type
homepage:            https://github.com/kowainik/trial
bug-reports:         https://github.com/kowainik/trial/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Data Structure, Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/trial.git

common common-options
  build-depends:       base >= 4.12.0.0 && < 4.14

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:       dlist ^>= 0.8.0.8
  exposed-modules:     Trial

executable trial
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       trial
                     , optparse-applicative
                     , text
                     , tomland ^>= 1.3.0.0

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite trial-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Trial.Gen
                       Test.Trial.Laws
                       Test.Trial.Property

  build-depends:       trial
                     , dlist
                     , hedgehog ^>= 1.0
                     , hspec ^>= 2.7
                     , hspec-hedgehog ^>= 0.0.1.1

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite trial-doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       doctest ^>= 0.16
  ghc-options:         -threaded